[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SPOinPyTorch"
version = "0.1.0"
description = "Simple Policy Optimization (SPO) algorithm implementation in PyTorch for reinforcement learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SPOinPyTorch Contributors"},
]
maintainers = [
    {name = "SPOinPyTorch Contributors"},
]
keywords = [
    "reinforcement-learning",
    "policy-optimization", 
    "pytorch",
    "spo",
    "continuous-control",
    "machine-learning",
    "deep-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "gymnasium>=0.28.0",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "optuna>=3.0.0",
    "tqdm>=4.60.0",
    "box2d-py>=2.3.5",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
all = [
    "SPOinPyTorch[examples,dev]"
]

[project.urls]
Homepage = "https://github.com/SPOinPyTorch/SPOinPyTorch"
Documentation = "https://github.com/SPOinPyTorch/SPOinPyTorch#readme"
Repository = "https://github.com/SPOinPyTorch/SPOinPyTorch.git"
"Bug Tracker" = "https://github.com/SPOinPyTorch/SPOinPyTorch/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["SPOinPyTorch"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=SPOinPyTorch --cov-report=term-missing --cov-report=html"
